# tn_gpu_ssd_bench

./: array_scaling_charts.py  chart_generator.py  check_raid_performance.sh  create_11_drive_raid0_xfs.sh  drive_comparison_benchmark.sh  drive_comparison_charts.py  ext4_array_benchmark.sh  file_system_comparison_charts.py  fix_iops_csv.py  parallel_array_benchmark.sh  raid_benchmark.sh  raid_benchmark_slow.sh  storage_diagnostics.sh
bb/: Makefile  build_and_test.sh  simple.sh  ultra_fast_read_to_gpu.cu  ultra_fast_test.py
bb/simple/: Makefile  enhanced_read_to_gpu.cu  simple.sh  simple_test.py
bb/systematic/: Makefile  build_and_test_systematic.sh  optimized_read_to_gpu.cu  systematic_test.py
bb/systematic/array_aware/: Makefile  array_aware_read.cu  array_scaling_test.py  build_array_test.sh  simple_parallel_test.py
bb/systematic/block_optimization/: Makefile  block_optimization.sh  block_size_optimization.cu  block_size_optimization_test.py
bb/systematic/micro/: Makefile  build_micro_test.sh  micro_optimizations.cu  micro_test.py
bb/systematic/simple_parallel/: Makefile  build_simple_parallel.sh  simple_parallel_read.cu  simple_parallel_scaling_test.py
initial_test/: CMakeLists.txt  aio_benchmark.py  gpu_test_yury.py  io_uring.c  io_uring_read  kv_cache_bandwidth_tester.cpp  kv_cache_benchmark_results.json  kv_cache_benchmark_results_gds.json  kvikio_1gb_test.py  kvikio_bandwidth_test.py  kvikio_bandwidth_test2.py  kvikio_debug.py  kvikio_first_test.py  kvikio_interference_test.py  kvikio_multi_gpu_random_bandwidth_broken.py  kvikio_multi_gpu_random_bandwidth_huge_file.py  kvikio_multi_gpu_random_huge_pread.py  kvikio_ssd_to_vram.py  kvikio_ssd_to_vram_manual_threads.py  kvikio_time_window_transfers.py  np_dat.py  np_memmap.py  np_memmap_bb1.py  np_tofile.py  np_tofile_bb.py  np_tofile_bb_large.py  np_tofile_multithread.py  parallel_io_libaio  parallel_io_libaio.cpp  parallel_io_pread  parallel_io_pread.cpp  parallel_io_read  parallel_io_read.cpp  parallel_io_read_comparison  parallel_io_read_comparison.cpp  parallel_io_uring_read  parallel_io_uring_read.cpp  raid_io_diagnose.py  read_benchmark.py  read_benchmark_heatmap.py  (+11 more)
initial_test/results/: gpu_0_bandwidth.csv  gpu_0_kvikio_bandwidth.csv  gpu_0_kvikio_pread_bandwidth.csv  gpu_1_bandwidth.csv  gpu_1_kvikio_bandwidth.csv  gpu_1_kvikio_pread_bandwidth.csv  kvikio_multi_gpu_bandwidth_vs_batch.csv  kvikio_multi_gpu_bandwidth_vs_batch_random.csv  kvikio_multi_gpu_random_bandwidth.csv  kvikio_ssd_to_vram_long.py  raid_benchmark_metrics.csv  raid_benchmark_results.csv  thread_scaling_results.csv  thread_scaling_results_full.csv
native/bren/mmap/: read_to_gpu_chunked_mmap  read_to_gpu_mmap  read_to_gpu_mmap.cpp  read_to_gpu_mmap_chunked  read_to_gpu_mmap_chunked.cpp  read_to_gpu_mmap_double_buffered  read_to_gpu_mmap_double_buffered.cpp  read_to_gpu_mmap_shared_staging  read_to_gpu_mmap_shared_staging.cpp  read_to_gpu_mmap_streamed  read_to_gpu_mmap_streamed.cpp  read_to_gpu_mmap_streamed_advanced  read_to_gpu_mmap_streamed_advanced.cpp  read_to_gpu_odirect  read_to_gpu_odirect.cpp  test_mmap.py
native/bren/mmap/io_uring/: build.sh  read_to_gpu_io_uring_enhanced.cu  test_io_uring.py  test_io_uring_multi.py
native/ike/io_ring_split/: libread_io_uring.cu  test_io_uring.py
native/ike/io_uring/: read_to_gpu_io_uring.cu  readme.txt  test_io_uring.py
results/4_Drive_RAID0/: drive_comparison_results.csv  drive_comparison_results_fixed_iops.csv
results/Ext4_vs_XFS/: array_scaling_comparison.csv  array_scaling_ext4_results.csv
